force-app/main/default/objects/ffr__SummarizationTemplate__c/ffr__SummarizationTemplate__c.object-meta.xml
<CustomObject>
    <customHelpPage>ffr__helpsummarizationtemplate</customHelpPage>
    <description>Stores settings to use for data summarization.</description>
    <label>Summarization Template</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Summarization Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>