force-app/main/default/objects/ffr__SummarizationTemplate__c/fields/ffr__ApexJobId__c.field-meta.xml
<CustomField>
    <fullName>ffr__ApexJobId__c</fullName>
    <label>Apex Job Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>