force-app/main/default/objects/ffr__SummarizationTemplate__c/fields/ffr__Destination__c.field-meta.xml
<CustomField>
    <fullName>ffr__Destination__c</fullName>
    <description>The destination SObject, i.e. the table in which the summarization template is held.</description>
    <label>Destination</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>