force-app/main/default/objects/ffr__SummarizationTemplate__c/fields/ffr__Filter__c.field-meta.xml
<CustomField>
    <fullName>ffr__Filter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Filter</label>
    <referenceTo>ffr__Filter__c</referenceTo>
    <relationshipLabel>SummarizationTemplates</relationshipLabel>
    <relationshipName>SummarizationTemplates</relationshipName>
    <type>Lookup</type>
</CustomField>