force-app/main/default/objects/ffr__SummarizationTemplate__c/fields/ffr__LastSuccessfulBuild__c.field-meta.xml
<CustomField>
    <fullName>ffr__LastSuccessfulBuild__c</fullName>
    <label>Last Successful Build</label>
    <summarizedField>ffr__SummarizationRunInformation__c.ffr__EndTime__c</summarizedField>
    <summaryForeignKey>ffr__SummarizationRunInformation__c.ffr__SummarizationTemplate__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>