force-app/main/default/objects/ffr__SummarizationTemplate__c/fields/ffr__ObjectToObjectMap__c.field-meta.xml
<CustomField>
    <fullName>ffr__ObjectToObjectMap__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The object to object map that this summarization template is based on.</description>
    <label>ObjectToObjectMap</label>
    <referenceTo>ffr__ObjectToObjectMap__c</referenceTo>
    <relationshipLabel>SummarizationTemplates</relationshipLabel>
    <relationshipName>SummarizationTemplates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>