force-app/main/default/objects/ffr__SummarizationTemplate__c/fields/ffr__SourceDataview__c.field-meta.xml
<CustomField>
    <fullName>ffr__SourceDataview__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The dataview that acts as the source of the field names for this summarization template.</description>
    <label>Dataview</label>
    <referenceTo>ffr__DataView__c</referenceTo>
    <relationshipLabel>Su</relationshipLabel>
    <relationshipName>SummarizationTemplates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>