force-app/main/default/objects/ffr__SummarizationTemplate__c/fields/ffr__TotalNumberOfLogs__c.field-meta.xml
<CustomField>
    <fullName>ffr__TotalNumberOfLogs__c</fullName>
    <label>Total Number of Logs</label>
    <summaryForeignKey>ffr__SummarizationLog__c.ffr__SummarizationTemplate__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>