force-app/main/default/objects/ffr__SummarizationTemplate__c/fields/ffr__UseCurrentPeriod__c.field-meta.xml
<CustomField>
    <fullName>ffr__UseCurrentPeriod__c</fullName>
    <defaultValue>true</defaultValue>
    <label>DEPRECATED:Current Period as Base Period</label>
    <type>Checkbox</type>
</CustomField>