force-app/main/default/objects/ffr__SummarizationTemplate__c/listViews/ffr__All.listView-meta.xml
<ListView>
    <fullName>ffr__All</fullName>
    <columns>NAME</columns>
    <columns>ffr__SourceDataview__c</columns>
    <columns>ffr__Status__c</columns>
    <columns>ffr__LastSuccessfulBuild__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>